# CTAT

./: .gitignore  CMakeLists.txt  README.md
data_storage/: CMakeLists.txt
data_storage/include/data_storage/: database_operation.hpp  database_operation_base.hpp  database_operation_cdcx.hpp
data_storage/src/: database_operation.cpp  database_operation_base.cpp  database_operation_cdcx.cpp  test_dataops_cdcx.cpp  test_sqlite3.cpp
pybind_ticker/: CMakeLists.txt
pybind_ticker/src/: ticker_pybind.cpp
ticker/: CMakeLists.txt
ticker/include/ticker/: curlpp_request.hpp  datahandler_base.hpp  datahandler_cdcx.hpp  parse_response.hpp  utility.hpp
ticker/src/: curlpp_request.cpp  datahandler_base.cpp  datahandler_cdcx.cpp  experiment_ticker_test.cpp  parse_response.cpp  test_curlpp_request_module.cpp
